@@ -69,6 +69,9 @@ a:not(.button):hover {
 
 .firstLevelWrap {
     display: flex;
+    position: sticky;
+    top: 0px;
+    background-color: black;
 }
 
 #menu {
@@ -327,7 +330,8 @@ a:not(.button):hover {
 
 #media img, #media video, #media audio {
     width: auto;
-    max-height: 70vh;
+    height: 60%;
+    max-height: 62vh;
     margin-left: auto;
     margin-right: auto;
 }
@@ -344,7 +348,6 @@ a:not(.button):hover {
 #media audio {
     margin-top: 200px;
 }
-
 
 /*
    _____       _           _                                  
